--- a/text/Makefile
+++ b/text/Makefile
@@ -1,7 +1,7 @@
 # WARNING: BIBTEX TURNED OFF FOR NOW
 
 LATEX       = pdflatex -interaction nonstopmode -halt-on-error -file-line-error
-CHECK_RERUN = grep "Rerun to get" $*.log
+CHECK_RERUN = grep "Rerun to get"
 CRUFT_SUFFS = pdf aux bbl blg log dvi ps eps out brf fls fdb_latexmk synctex.gz bcf run.xml
 NAME        = joaquin-dr17
 
@@ -12,8 +12,8 @@ ${NAME}.pdf: ${NAME}.tex # refs.bib
 # 	bibtex ${NAME}
 #	${LATEX} ${NAME}.tex
 #	${LATEX} ${NAME}.tex
-	( ${CHECK_RERUN} && ${LATEX} $* ) || echo "Done."
-	( ${CHECK_RERUN} && ${LATEX} $* ) || echo "Done."
+	( ${CHECK_RERUN} ${NAME}.log && ${LATEX} ${NAME} ) || echo "Done."
+	( ${CHECK_RERUN} ${NAME}.log && ${LATEX} ${NAME} ) || echo "Done."
 
 clean:
 	${RM} $(foreach suff, ${CRUFT_SUFFS}, ${NAME}.${suff})
