--- a/config.yml
+++ b/config.yml
@@ -14,6 +14,9 @@ apogee_cache_path: /mnt/ceph/users/apricewhelan/apogee/
 apogee_dr: dr17
 apogee_reduction: dr17
 
+## Gaia parallax zero-point adopted
+parallax_zpt: -0.03
+
 ## Photometry used by Joaquin to train on / predict parallaxes:
 phot_names:
   - phot_g_mean_mag
@@ -46,6 +49,9 @@ Kfold_K: 4
 
 ## Number of PCA components to use to patch the missing spectral pixels:
 patching_pca_components: 8
+
+## Maximum number of iterations to run the optimizer when training:
+optimize_train_maxiter: 16384
 
 ## Random number seed
 seed: null
