--- a/config.yml
+++ b/config.yml
@@ -42,7 +42,7 @@ neighborhood_pca_components: 8
 max_neighborhood_size: 32768
 
 ## Size of the testing subsample, the "block", around each "stoop":
-block_size: 1024
+block_size: 2048
 
 ## For cross-validation:
 Kfold_K: 4
@@ -52,6 +52,7 @@ patching_pca_components: 8
 
 ## Maximum number of iterations to run the optimizer when training:
 optimize_train_maxiter: 16384
+Kfold_test_maxiter: 1024
 
 ## Random number seed
 seed: null
